syntax = "proto3";

option go_package = "./pb/generated;pb";
import "google/protobuf/empty.proto";

service AdminAccountService {
    //Login
    rpc AdminLoginViaPassword(AdminLoginViaPasswordRequest) returns (AdminLoginResponse);    //done

    //profile
    rpc AdminGetProfile(AdminGetProfileRequest) returns (AdminGetProfileResponse);    //done
    rpc AdminUpdateProfile(AdminUpdateProfileRequest) returns (google.protobuf.Empty);    //unimplemented
    rpc AdminUpdatePasswordUsingOldPw(AdminUpdatePasswordUsingOldPwRequest) returns (google.protobuf.Empty);    //done

    //manage account
    rpc AdminGetAdmins(AdminGetAdminsRequest) returns (AdminGetAdminsResponse);    //done

}

message AdminGetAdminsRequest {
    int32 adminId = 1;
    AdminSearchCriteria searchCriteria = 2;
}

message AdminSearchCriteria {
    int32 deptId = 1;
    int32 rankId = 2;
    string designation = 3;
    string firstName = 4;
    string lastName = 5;
    string email = 6;
    string phoneNumber = 7;
}

message AdminGetAdminsResponse {
    repeated Admin admin = 1;
}

message Admin {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string address = 5;
    string pincode = 6;
    string phoneNumber = 7;
    string designation = 8;
    int32 deptId = 9;
    int32 rankId = 10;
}

message AdminUpdateProfileRequest {
    int32 adminId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string address = 5;
    string pincode = 6;
    string phoneNumber = 7;
}

message AdminUpdatePasswordUsingOldPwRequest {
    int32 adminId = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message AdminGetProfileRequest {
    int32 adminId = 1;
}

message AdminGetProfileResponse {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string address = 4;
    string pincode = 5;
    string phoneNumber = 6;
    string designation = 7;
    int32 deptId = 8;
    int32 rankId = 9;
    string username = 10;
}

message AdminLoginViaPasswordRequest {
    string username = 1;
    string password = 2;
}

message AdminLoginResponse {
    string message = 1;
    string token = 2;
    LoggingAdminDetails adminDetails = 3;
}

message LoggingAdminDetails {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string phoneNumber = 4;
    int32 deptId = 5;
    int32 rankId = 6;
    string designation = 7;
}

